--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/ketrab321/Note-App#readme",
   "dependencies": {
-    "validator": "^10.8.0"
+    "chalk": "^2.4.2",
+    "validator": "^10.8.0",
+    "yargs": "^12.0.2"
   }
 }
